--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -7,18 +7,17 @@ html {
     padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
-    /* font-style: normal; */
+    color: hsl(240, 2%, 35%);
 }
 
 #side-bar {
-    width: 200px;
+    width: 220px;
     height: 100%;
     position: fixed;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
     gap: 2rem;
-    padding: 2.75rem 2.5rem;
+    padding: 2.75rem 2rem;
 }
 
 #side-bar #logo {
@@ -29,24 +28,43 @@ html {
 #side-bar #nav-bar {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
+}
+
+#side-bar #nav-bar a {
+    text-decoration: none;
+    font-weight: 700;
 }
 
 #side-bar #inquire {
     margin-top: auto;
+    text-decoration: none;
+    background-color: hsl(202, 92%, 56%);
+    padding: 1rem 0.8rem;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+}
+
+.content-section > * {
+    padding-right: 1.5rem;
 }
 
 .content-section .hero-section {
-    height: 75vh;
+    height: 78vh;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
     align-items: center;
     gap: 1.5rem;
+    background-image: url("../MEDIA/Assets/blob.png");
+    background-size: 80%;
+    background-position: top right;
+    background-repeat: no-repeat;
 }
 
 .content-section .hero-section h2 {
-    font-size: 2.35rem;
+    font-size: 2.4rem;
     line-height: 1.05;
     margin-top: 2.3rem;
     font-weight: 800;
@@ -70,4 +88,23 @@ html {
 .content-section .hero-section .image-container img {
     width: 95%;
     margin-left: auto;
+}
+
+
+.content-section .about-section {
+
+}
+
+.content-section .about-section h3 {
+    font-size: 2rem;
+}
+
+.content-section .about-section p {
+    font-size: 1.1rem;
+}
+
+
+.content-section .inquiries-section {
+    background-color: hsl(14, 72%, 51%);
+    width: 100%;
 }
