--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -48,7 +48,7 @@ html {
 }
 
 .content-section > * {
-    padding-right: 1.5rem;
+    padding-right: 3.5rem;
 }
 
 .content-section .hero-section {
@@ -104,7 +104,30 @@ html {
 }
 
 
-.content-section .inquiries-section {
+.content-section .inquiries-section .inquiries-subsection {
+    border-radius: 15px;
     background-color: hsl(14, 72%, 51%);
     width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+
+.content-section .inquiries-section .inquiries-subsection .map-subsection,
+.content-section .inquiries-section .inquiries-subsection .form-subsection {
+    width: 50%;
+}
+
+.content-section .inquiries-section .inquiries-subsection .map-subsection {
+}
+
+.content-section .inquiries-section .inquiries-subsection .map-subsection .google-map {
+    width: 100%;
+    height: 400px;
+    padding-bottom: 75%;
+    /* overflow: hidden; */
+}
+
+.content-section .inquiries-section .inquiries-subsection .map-subsection .google-map iframe {
+    
 }
