--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -105,29 +105,81 @@ html {
 
 
 .content-section .inquiries-section .inquiries-subsection {
-    border-radius: 15px;
+    border-radius: 20px;
     background-color: hsl(14, 72%, 51%);
+    padding: 0.8rem;
+    gap: 0.8rem;
     width: 100%;
     display: flex;
     flex-flow: row wrap;
 }
 
-
-.content-section .inquiries-section .inquiries-subsection .map-subsection,
-.content-section .inquiries-section .inquiries-subsection .form-subsection {
-    width: 50%;
-}
-
 .content-section .inquiries-section .inquiries-subsection .map-subsection {
+    width: 510px;
 }
 
 .content-section .inquiries-section .inquiries-subsection .map-subsection .google-map {
     width: 100%;
-    height: 400px;
+    height: 450px;
     padding-bottom: 75%;
-    /* overflow: hidden; */
+    overflow: hidden;
+    border-radius: calc(20px - 0.8rem);
 }
 
 .content-section .inquiries-section .inquiries-subsection .map-subsection .google-map iframe {
     
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form {
+    height: 100%;
+    width: 375px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form h3 {
+    font-size: 2rem;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form * {
+    font-size: 1.1rem;
+    color: #fff;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form button[type=submit] {
+    margin-top: auto;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item {
+    position: relative;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item label {
+    position: absolute;
+    font-weight: 600;
+    padding-inline: 0.45rem;
+    top: 0.5rem;
+    left: 0.5rem;
+    background-color: hsl(14, 72%, 51%);
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item input,
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item textarea {
+    width: 100%;
+    padding: 0.45rem;
+    border: 3px solid hsl(202, 92%, 56%);
+    background: none;
+    border-radius: calc(20px - 0.8rem);
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item textarea {
+    height: 120px;
+    resize: none;
 }
