--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -111,28 +111,36 @@ html {
     gap: 0.8rem;
     width: 100%;
     display: flex;
+    justify-content: center;
     flex-flow: row wrap;
 }
 
 .content-section .inquiries-section .inquiries-subsection .map-subsection {
-    width: 510px;
+    width: min(100%, 530px);
 }
 
 .content-section .inquiries-section .inquiries-subsection .map-subsection .google-map {
     width: 100%;
     height: 450px;
     padding-bottom: 75%;
-    overflow: hidden;
+    position: relative;
     border-radius: calc(20px - 0.8rem);
 }
 
 .content-section .inquiries-section .inquiries-subsection .map-subsection .google-map iframe {
-    
+    position: absolute;
+    inset: 0 0;
+    width: 100%;
+    height: 100%;
+}
+
+.content-section .inquiries-section .inquiries-subsection .form-subsection {
+    width: min(100%, 420px);
 }
 
 .content-section .inquiries-section .inquiries-subsection .form-subsection form {
     height: 100%;
-    width: 375px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1.1rem;
@@ -149,6 +157,14 @@ html {
 
 .content-section .inquiries-section .inquiries-subsection .form-subsection form button[type=submit] {
     margin-top: auto;
+    font-weight: 700;
+    padding: 1rem 0.8rem;
+    border: none;
+    border-radius: 10px;
+    background-color: #fff;
+    color: hsl(14, 72%, 51%);
+    font-size: 1.35rem;
+    width: 10rem;
 }
 
 .content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items {
@@ -164,19 +180,19 @@ html {
 .content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item label {
     position: absolute;
     font-weight: 600;
-    padding-inline: 0.45rem;
+    padding-right: 0.45rem;
     top: 0.5rem;
-    left: 0.5rem;
     background-color: hsl(14, 72%, 51%);
 }
 
 .content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item input,
 .content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item textarea {
     width: 100%;
-    padding: 0.45rem;
-    border: 3px solid hsl(202, 92%, 56%);
+    padding: 0.45rem 0.45rem 0.45rem 0;
+    border-width: 0 0 3px 0;
+    border-style: solid;
+    border-color: #fff;
     background: none;
-    border-radius: calc(20px - 0.8rem);
 }
 
 .content-section .inquiries-section .inquiries-subsection .form-subsection form .form-items .form-item textarea {
